# Klona

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  install_agent.py  opencode.json
docs/superpowers/plans/: 2026-04-25-sandbox-e2e.md  2026-04-26-memory-mcp-e2e-scenario2.md  2026-04-26-opencode-agents-marker.md
e2e_test/: docker-compose.base.yml  docker-compose.e2e.yml  docker-compose.scenario1.yml  docker-compose.scenario2.yml  e2e_runner.py  e2e_scenario1.py  e2e_scenario2.py  run_e2e.sh
e2e_test/test_vault/: KLONA_MEMORY_MENTAL_MODEL.md
klona_agent/claude/: README.md  install.py
klona_agent/codex/: install.py
klona_agent/opencode/: install.py
memory_agent/: Dockerfile  pyproject.toml
memory_agent/src/memory_agent/: __init__.py  __main__.py  config.py  constants.py  mental_model.py  opencode_client.py  prompts.py  queue.py  runtime.py  server.py  skills.py  system_prompt.py  worker.py
memory_server/: .env.example  Dockerfile  README.md  docker-compose.yml  memory_system_design.md  pyproject.toml
memory_server/src/: server.py
sandbox/: Dockerfile  build.sh  docker-compose.e2e.yml  e2e_scenario1.py  e2e_test.sh  run_e2e.sh  start_docker.sh
sandbox/test_vault/: MENTAL_MODEL.md
scripts/: init_memory_stack.py
tests/: test_claude_installer.py  test_claude_plugin_assets.py  test_codex_installer.py  test_memory_agent_core.py  test_memory_server_paths.py  test_opencode_installer.py  test_opencode_plugin.py  test_root_installer.py  test_sandbox_e2e_scenario1_capture.py  test_sandbox_e2e_scripts.py  test_server_side_assets.py
(+15 files in other folders)
