[project]
name = "klona-memory-agent"
version = "0.1.0"
description = "Klona high-level memory MCP agent backed by OpenCode and SQLite"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.0",
    "uvicorn>=0.31.1",
    "httpx>=0.27.0",
]

[project.scripts]
memory-agent-server = "memory_agent.server:main"
memory-agent-worker = "memory_agent.worker:main"
memory-agent-runtime = "memory_agent.runtime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_agent"]
